--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@types/node": "^14.14.14",
     "@types/source-map-support": "^0.5.3",
+    "apollo-server": "^3.5.0",
     "source-map-support": "^0.5.19"
   }
 }
