--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/node": "^14.14.14",
     "@types/source-map-support": "^0.5.3",
+    "lerna": "^4.0.0",
     "source-map-support": "^0.5.19"
   }
 }
