--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "means-of-production",
   "workspaces": [
-    "domain",
-    "graphql-api",
-    "webclient"
+    "mop-domain",
+    "mop-graphql-api",
+    "mop-webclient"
   ],
   "devDependencies": {
     "@babel/preset-env": "^7.12.11",
