--- a/packages/mop-domain/package.json
+++ b/packages/mop-domain/package.json
@@ -4,8 +4,8 @@
   "description": "Main domain library for means of production website, a free management tool for a distributed thing library",
   "main": "index.js",
   "scripts": {
-    "test": "../node_modules/.bin/jest --coverage",
-    "build": "../node_modules/.bin/tsc"
+    "test": "../../node_modules/.bin/jest --coverage",
+    "build": "../../node_modules/.bin/tsc"
   },
   "author": "Matty Roses",
   "repository": {
