--- a/mop-graphql-api/tsconfig.json
+++ b/mop-graphql-api/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "../tsconfig-base.json"
+  "extends": "../tsconfig-base.json",
+  "references": [
+    {"path": "../packages/mop-domain"}
+  ]
 }
