--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "yarn run clean && yarn run compile",
     "clean": "rimraf -rf ./dist",
-    "compile": "tsc -p tsconfig.build.json",
+    "compile": "tsc -p tsconfig.json",
     "prepublishOnly": "yarn run build"
   },
   "peerDependencies": {
