--- a/examples/webpack/tsconfig.json
+++ b/examples/webpack/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../../tsconfig.json"
+  "extends": "../../tsconfig.json",
+  "compilerOptions": {
+    "noEmit": false,
+    "declaration": false,
+    "declarationMap": false
+  }
 }
