More build fixes, not quite there yet

--- a/apps/graphql-api/tsconfig.json
+++ b/apps/graphql-api/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
-    "outDir": "../../dist/graphql-api"
-  },
+    "rootDir": "./src",
+    "outDir": "../../dist/apps/graphql-api"
+  }
 }
