--- a/apps/webclient/tsconfig.json
+++ b/apps/webclient/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "target": "es5",
-
+    "target": "es6",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -16,7 +15,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "composite": true
+    "composite": true,
+    "rootDir": "./src",
+    "outDir": "../../dist/apps/webclient"
   },
   "include": [
     "src"
