--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "composite": true
+    "composite": true,
+    "rootDir": "./src",
+    "outDir": "../../dist/packages/domain"
   }
 }
