--- a/packages/domain/tsconfig.json
+++ b/packages/domain/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "composite": true,
-    "rootDir": "./src",
+    "rootDir": ".",
     "outDir": "../../dist/packages/domain"
   }
 }
