--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -11,5 +11,13 @@
   "repository": {
     "url": ""
   },
+  "devDependencies": {
+    "@babel/preset-env": "^7.12.11",
+    "@types/jest": "^26.0.19",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
+    "tslint": "^6.1.3"
+  },
   "license": "GPL-3.0-or-later"
 }
