--- a/packages/graphql-api/package.json
+++ b/packages/graphql-api/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "rm -rf dist/* && tsc -p tsconfig.pkg.json"
@@ -18,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/matty-roses/meansofproduction/issues"
   },
-  "homepage": "https://github.com/matty-roses/meansofproduction#readme"
+  "homepage": "https://github.com/matty-roses/meansofproduction#readme",
+  "dependencies": {
+    "@types/graphql": "^14.5.0",
+    "apollo-server": "^3.6.1"
+  }
 }
