--- a/packages/domain/tsconfig.pkg.json
+++ b/packages/domain/tsconfig.pkg.json
@@ -1,7 +1,8 @@
 {
   "extends": "../../tsconfig.build.json",
   "compilerOptions": {
-    "outDir": "./dist/"
+    "outDir": "./dist/",
+    "downlevelIteration": true
   },
   "include": [
     "./**/*.ts"
