--- a/packages/server-core/package.json
+++ b/packages/server-core/package.json
@@ -12,6 +12,9 @@
     "type": "git",
     "url": "git+https://github.com/matty-roses/meansofproduction.git"
   },
+  "dependencies": {
+    "@meansofproduction/domain": "*"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
