--- a/packages/graphql-api/package.json
+++ b/packages/graphql-api/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "compile": "rm -rf dist/* && tsc -p tsconfig.pkg.json"
+    "compile": "rm -rf dist/* && tsc -p tsconfig.pkg.json",
+    "start": "ts-node index.ts"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/matty-roses/meansofproduction#readme",
   "dependencies": {
     "@types/graphql": "^14.5.0",
-    "apollo-server": "^3.6.1"
+    "apollo-server": "^3.6.1",
+    "ts-node": "^10.4.0"
   }
 }
