--- a/packages/server-core/package.json
+++ b/packages/server-core/package.json
@@ -3,7 +3,6 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "rm -rf dist/* && tsc -p tsconfig.pkg.json"
@@ -13,7 +12,8 @@
     "url": "git+https://github.com/matty-roses/meansofproduction.git"
   },
   "dependencies": {
-    "@meansofproduction/domain": "*"
+    "@meansofproduction/domain": "*",
+    "ts-node": "^10.4.0"
   },
   "keywords": [],
   "author": "",
