--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -15,6 +15,9 @@
     "declaration": true,
     "paths": {
       "@meansofproduction/*": ["./packages/*/"]
-    }
+    },
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "useUnknownInCatchVariables": true
   }
 }
